Process: Detect a recursive call to waitForSignal()

Assert that we don't call it recursively. If so, the waitForSignal()
returns false immediately.

Fixes: QTCREATORBUG-30715
Change-Id: I7195b2b1347f67262cc8ae6db5439f5ddd38b5bb
Reviewed-by: Alessandro Portale <alessandro.portale@qt.io>